# audimeter

./: README.md
audilinea/: .env  README.md  deploy.sh  docker-compose.yml
audilinea/extractor/: main.py
audilinea/ntopng/config/: ntopng.conf
audilinea/scripts/: detect_interface.sh
auditele/esp32/: CMakeLists.txt  README.md  main.c  sdkconfig.defaults
auditele/esp32/components/ssd1306/: ssd1306.h
auditele/esp32/main/: CMakeLists.txt
